--- a/repo.template
+++ b/repo.template
@@ -3,7 +3,8 @@ name=HTCondor for <Platform-Name> - <Repo-Name>
 baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>
 enabled=<Enabled>
 gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor
+repo_gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-9.0<Daily>
 priority=90
 
 [<yumrepo>-debuginfo]
@@ -11,7 +12,8 @@ name=HTCondor for <Platform-Name> - <Repo-Name> - Debug
 baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>/debug
 enabled=0
 gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor
+repo_gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-9.0<Daily>
 priority=90
 
 [<yumrepo>-source]
@@ -19,6 +21,7 @@ name=HTCondor for <Platform-Name> - <Repo-Name> - Source
 baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>/SRPMS
 enabled=0
 gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor
+repo_gpgcheck=1
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-9.0<Daily>
 priority=90
 
