--- a/repo.template
+++ b/repo.template
@@ -1,6 +1,6 @@
 [<yumrepo>]
 name=HTCondor for <Platform-Name> - <Repo-Name>
-baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>
+baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/$basearch/<repo>
 enabled=<Enabled>
 gpgcheck=1
 repo_gpgcheck=1
@@ -9,7 +9,7 @@ priority=90
 
 [<yumrepo>-debuginfo]
 name=HTCondor for <Platform-Name> - <Repo-Name> - Debug
-baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>/debug
+baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/$basearch/<repo>/debug
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
@@ -18,7 +18,7 @@ priority=90
 
 [<yumrepo>-source]
 name=HTCondor for <Platform-Name> - <Repo-Name> - Source
-baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/<repo>/SRPMS
+baseurl=https://research.cs.wisc.edu/htcondor/repo/<version>/<platform>/$basearch/<repo>/SRPMS
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
