--- a/repo.template
+++ b/repo.template
@@ -1,24 +1,24 @@
-[<yumrepo><test>]
+[<yumrepo><suffix>]
 name=HTCondor for <Platform-Name> - <Repo-Name>
-baseurl=https://research.cs.wisc.edu/htcondor/repo<test>/<version>/<platform>/$basearch/<repo>
+baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/$basearch/<repo>
 enabled=<Enabled>
 gpgcheck=1
 repo_gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Daily>
 priority=90
 
-[<yumrepo><test>-debuginfo]
+[<yumrepo><suffix>-debuginfo]
 name=HTCondor for <Platform-Name> - <Repo-Name> - Debug
-baseurl=https://research.cs.wisc.edu/htcondor/repo<test>/<version>/<platform>/$basearch/<repo>/debug
+baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/$basearch/<repo>/debug
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
 gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Daily>
 priority=90
 
-[<yumrepo><test>-source]
+[<yumrepo><suffix>-source]
 name=HTCondor for <Platform-Name> - <Repo-Name> - Source
-baseurl=https://research.cs.wisc.edu/htcondor/repo<test>/<version>/<platform>/$basearch/<repo>/SRPMS
+baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/$basearch/<repo>/SRPMS
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
