--- a/repo.template
+++ b/repo.template
@@ -4,7 +4,7 @@ baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/
 enabled=<Enabled>
 gpgcheck=1
 repo_gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Daily>
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Snapshot>
 priority=90
 
 [<yumrepo><suffix>-debuginfo]
@@ -13,7 +13,7 @@ baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Daily>
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Snapshot>
 priority=90
 
 [<yumrepo><suffix>-source]
@@ -22,6 +22,6 @@ baseurl=https://research.cs.wisc.edu/htcondor/repo<suffix>/<version>/<platform>/
 enabled=0
 gpgcheck=1
 repo_gpgcheck=1
-gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Daily>
+gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-HTCondor-<version><Snapshot>
 priority=90
 
